# ai-newspaper-agent

./: .env.example  .flake8  .gitignore  LICENSE  README.md  SETUP_INSTRUCTIONS.md  config_template.py  conftest.py  constraints.txt  env_example.txt  main.py  newspaper_pipeline.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  start.py  test_app.py  test_deepseek.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  pipeline.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
static/css/: style.css
static/js/: app.js
templates/: index.html
test_ci_fixes/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_app.py  test_pipeline.py
