[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-newspaper-agent"
version = "1.0.0"
description = "AI Newspaper Agent - Three-stage LLM pipeline for automated journalism"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
